# iam-runtime-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.json
.github/workflows/: publish.yml  update.yml
builder/: Cargo.toml  build.rs
builder/proto/: README.md
builder/src/: main.rs
docs/: publish.md
ia/m-/: iam-runtime-rs
iam-runtime/: Cargo.toml
iam-runtime/src/: lib.rs  runtime.iam.v1.rs
proto/: README.md  authentication.proto  authorization.proto  identity.proto
script/: bump.sh  download_protos.sh  fetch.sh  get_newer_version.sh  version.sh
src/: lib.rs  runtime.iam.v1.rs
