[package]
name = "iam-runtime-rs"
version = "0.6.0"
edition = "2021"
description = "Generated protobufs for integrating with and implementing iam-runtime services"
license = "Apache-2.0"
repository = "https://github.com/metal-toolbox/iam-runtime-rs"

[dependencies]
prost = "0.14.0"
prost-types = "0.14.0"
tonic = "0.13.0"
