[package]
name = "iam-runtime-rs"
version = "0.7.0"
edition = "2021"
description = "Generated protobufs for integrating with and implementing iam-runtime services"
license = "Apache-2.0"
repository = "https://github.com/metal-toolbox/iam-runtime-rs"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
